--- a/trunk/src/wowmodelview.vcproj
+++ b/trunk/src/wowmodelview.vcproj
@@ -146,7 +146,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;C:\wxWidgets-2.8.11\include&quot;;&quot;C:\wxWidgets-2.8.11\include\msvc&quot;;.\zlib\;.\glew\include\;.\bzip2\;.\CxImage\;.\"
 				PreprocessorDefinitions="WIN32;_WIN32;_WINDOWS;WIN64;_WIN64;_AMD64_;_M_AMD64;__WINDOWS__;__WXMSW__;_DEBUG;__WXDEBUG__;_CRT_SECURE_NO_WARNINGS"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
 				RuntimeLibrary="3"
@@ -177,7 +177,7 @@
 				AdditionalDependencies="glew32d.lib wxpngd.lib"
 				OutputFile="$(OutDir)/wowmodelview.exe"
 				Version="07.01.298"
-				LinkIncremental="0"
+				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.11\lib\vc_lib\$(PlatformName)&quot;;.\lib\Windows\64bit;&quot;.\zlib\$(OutDir)&quot;;&quot;.\bzip2\$(OutDir)&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
