--- a/trunk/src/wowmodelview.vcproj
+++ b/trunk/src/wowmodelview.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="wowmodelview"
 	ProjectGUID="{DCA0C667-2A7A-4FCE-AD02-466F7A380E0C}"
 	RootNamespace="wowmodelview"
@@ -597,6 +597,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\UserSkins.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\util.cpp"
 				>
 			</File>
@@ -816,6 +820,10 @@
 			</File>
 			<File
 				RelativePath=".\shaders.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UserSkins.h"
 				>
 			</File>
 			<File
