--- a/trunk/src/stormlib/Storm_dll.vcproj
+++ b/trunk/src/stormlib/Storm_dll.vcproj
@@ -68,8 +68,6 @@
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				BaseAddress="0x15000000"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -89,6 +87,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -147,8 +148,6 @@
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				BaseAddress="0x15000000"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -170,6 +169,9 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 				CommandLine="Storm_dll.bat $(PlatformName) $(ConfigurationName)"
 			/>
@@ -185,6 +187,10 @@
 			>
 			<File
 				RelativePath=".\Storm_dll\storm_dll.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\storm_dll\storm_dll.def"
 				>
 			</File>
 		</Filter>
