--- a/trunk/src/wowmodelview.vcproj
+++ b/trunk/src/wowmodelview.vcproj
@@ -70,6 +70,7 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				AdditionalIncludeDirectories="C:\wxWidgets-2.8.11\include"
+				ResourceOutputFileName="$(IntDir)/$(InputName)32.res"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -77,15 +78,16 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew32d.lib wxpngd.lib"
-				OutputFile="$(OutDir)/wowmodelview.exe"
-				Version="07.01.498"
+				OutputFile="$(OutDir)/wowmodelview32.exe"
+				Version="07.01.500"
 				LinkIncremental="0"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.11\lib\vc_lib\$(PlatformName)&quot;;&quot;C:\wxWidgets-2.8.11\lib\vc_lib\&quot;;.\lib\Windows\32bit;&quot;.\zlib\$(OutDir)&quot;;&quot;.\bzip2\$(OutDir)&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/wowmodelview.pdb"
+				ProgramDatabaseFile="$(IntDir)/wowmodelview32.pdb"
 				GenerateMapFile="true"
+				MapFileName="$(IntDir)/wowmodelview32.map"
 				MapExports="true"
 				SubSystem="2"
 				LargeAddressAware="2"
@@ -113,7 +115,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\bin_support\Windows\32bit\cximagecrtd.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\fbxsdk_20113d.dll $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\* $(OutDir)\enUS\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;"
+				CommandLine="copy ..\bin_support\Windows\32bit\cximagecrtd.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\fbxsdk_20113d.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Splash\Splash_04-Cata_01.png $(OutDir)\Splash.png&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\* $(OutDir)\enUS\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -168,6 +170,7 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				AdditionalIncludeDirectories="C:\wxWidgets-2.8.11\include"
+				ResourceOutputFileName="$(IntDir)/$(InputName)64.res"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -175,21 +178,24 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew64d.lib wxpngd.lib"
-				OutputFile="$(OutDir)/wowmodelview.exe"
-				Version="07.01.498"
+				OutputFile="$(OutDir)/wowmodelview64.exe"
+				Version="07.01.500"
 				LinkIncremental="2"
+				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.11\lib\vc_lib\$(PlatformName)&quot;;.\lib\Windows\64bit;&quot;.\zlib\$(OutDir)&quot;;&quot;.\bzip2\$(OutDir)&quot;"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/wowmodelview.pdb"
+				ProgramDatabaseFile="$(IntDir)/wowmodelview64.pdb"
 				GenerateMapFile="true"
+				MapFileName="$(IntDir)/wowmodelview64.map"
 				MapExports="true"
 				SubSystem="2"
 				LargeAddressAware="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				TargetMachine="17"
+				CLRThreadAttribute="0"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -211,7 +217,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\bin_support\Windows\64bit\cximagecrtd.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\64bit\fbxsdk_20113_amd64d.dll $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\* $(OutDir)\enUS\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;"
+				CommandLine="copy ..\bin_support\Windows\64bit\cximagecrtd.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\64bit\fbxsdk_20113_amd64d.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Splash\Splash_04-Cata_01.png $(OutDir)\Splash.png&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\* $(OutDir)\enUS\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -270,6 +276,7 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				AdditionalIncludeDirectories=""
+				ResourceOutputFileName="$(IntDir)/$(InputName)32.res"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -278,8 +285,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew32.lib wxpng.lib"
 				ShowProgress="2"
-				OutputFile="$(OutDir)/wowmodelview.exe"
-				Version="07.01.498"
+				OutputFile="$(OutDir)/wowmodelview32.exe"
+				Version="07.01.500"
 				LinkIncremental="0"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.11\lib\vc_lib\$(PlatformName)&quot;;&quot;C:\wxWidgets-2.8.11\lib\vc_lib\&quot;;.\lib\Windows\32bit;&quot;.\zlib\$(OutDir)&quot;;&quot;.\bzip2\$(OutDir)&quot;"
@@ -293,7 +300,7 @@
 				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
+				OptimizeForWindows98="0"
 				SetChecksum="true"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -319,7 +326,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\bin_support\Windows\32bit\cximagecrt.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\fbxsdk_20113.dll $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\*.csv $(OutDir)\enUS\&#x0D;&#x0A;mkdir $(OutDir)\zhCN&#x0D;&#x0A;copy ..\bin\zhCN\*.csv $(OutDir)\zhCN\&#x0D;&#x0A;mkdir $(OutDir)\zhTW&#x0D;&#x0A;copy ..\bin\zhTW\*.csv $(OutDir)\zhTW\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\mo&#x0D;&#x0A;copy po\*.mo $(OutDir)\mo\&#x0D;&#x0A;mkdir $(OutDir)\Export&#x0D;&#x0A;mkdir $(OutDir)\Import&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\msvcr90.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\msvcp90.dll $(OutDir)\&#x0D;&#x0A;copy ..\doc\ChangeLog.txt $(OutDir)\&#x0D;&#x0A;copy ..\bin\COPYING $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\userSettings&#x0D;&#x0A;copy ..\bin\userSettings\*.* $(OutDir)\userSettings&#x0D;&#x0A;"
+				CommandLine="copy ..\bin_support\Windows\32bit\cximagecrt.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\fbxsdk_20113.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Splash\Splash_04-Cata_01.png $(OutDir)\Splash.png&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\*.csv $(OutDir)\enUS\&#x0D;&#x0A;mkdir $(OutDir)\zhCN&#x0D;&#x0A;copy ..\bin\zhCN\*.csv $(OutDir)\zhCN\&#x0D;&#x0A;mkdir $(OutDir)\zhTW&#x0D;&#x0A;copy ..\bin\zhTW\*.csv $(OutDir)\zhTW\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\mo&#x0D;&#x0A;copy po\*.mo $(OutDir)\mo\&#x0D;&#x0A;mkdir $(OutDir)\Export&#x0D;&#x0A;mkdir $(OutDir)\Import&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\msvcr90.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\32bit\msvcp90.dll $(OutDir)\&#x0D;&#x0A;copy ..\doc\ChangeLog.txt $(OutDir)\&#x0D;&#x0A;copy ..\bin\COPYING $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\userSettings&#x0D;&#x0A;copy ..\bin\userSettings\*.* $(OutDir)\userSettings&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -379,6 +386,7 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				AdditionalIncludeDirectories="C:\wxWidgets-2.8.11\include\"
+				ResourceOutputFileName="$(IntDir)/$(InputName)64.res"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -387,8 +395,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew64.lib wxpng.lib"
 				ShowProgress="2"
-				OutputFile="$(OutDir)/wowmodelview.exe"
-				Version="07.01.498"
+				OutputFile="$(OutDir)/wowmodelview64.exe"
+				Version="07.01.500"
 				LinkIncremental="0"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.11\lib\vc_lib\$(PlatformName)&quot;;.\lib\Windows\64bit;&quot;.\zlib\$(OutDir)&quot;;&quot;.\bzip2\$(OutDir)&quot;"
@@ -402,7 +410,7 @@
 				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				OptimizeForWindows98="1"
+				OptimizeForWindows98="0"
 				SetChecksum="true"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -428,7 +436,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\bin_support\Windows\64bit\cximagecrt.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\64bit\fbxsdk_20113_amd64.dll $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\*.csv $(OutDir)\enUS\&#x0D;&#x0A;mkdir $(OutDir)\zhCN&#x0D;&#x0A;copy ..\bin\zhCN\*.csv $(OutDir)\zhCN\&#x0D;&#x0A;mkdir $(OutDir)\zhTW&#x0D;&#x0A;copy ..\bin\zhTW\*.csv $(OutDir)\zhTW\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\mo&#x0D;&#x0A;copy po\*.mo $(OutDir)\mo\&#x0D;&#x0A;mkdir $(OutDir)\Export&#x0D;&#x0A;mkdir $(OutDir)\Import&#x0D;&#x0A;copy ..\bin_support\Windows\64bit\msvcr90.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\64bit\msvcp90.dll $(OutDir)\&#x0D;&#x0A;copy ..\doc\ChangeLog.txt $(OutDir)\&#x0D;&#x0A;copy ..\bin\COPYING $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\userSettings&#x0D;&#x0A;copy ..\bin\userSettings\*.* $(OutDir)\userSettings&#x0D;&#x0A;"
+				CommandLine="copy ..\bin_support\Windows\64bit\cximagecrt.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Windows\64bit\fbxsdk_20113_amd64.dll $(OutDir)\&#x0D;&#x0A;copy ..\bin_support\Splash\Splash_04-Cata_01.png $(OutDir)\Splash.png&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\*.csv $(OutDir)\enUS\&#x0D;&#x0A;mkdir $(OutDir)\zhCN&#x0D;&#x0A;copy ..\bin\zhCN\*.csv $(OutDir)\zhCN\&#x0D;&#x0A;mkdir $(OutDir)\zhTW&#x0D;&#x0A;copy ..\bin\zhTW\*.csv $(OutDir)\zhTW\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\mo&#x0D;&#x0A;copy po\*.mo $(OutDir)\mo\&#x0D;&#x0A;mkdir $(OutDir)\Export&#x0D;&#x0A;mkdir $(OutDir)\Import&#x0D;&#x0A;copy ..\doc\ChangeLog.txt $(OutDir)\&#x0D;&#x0A;copy ..\bin\COPYING $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\userSettings&#x0D;&#x0A;copy ..\bin\userSettings\*.* $(OutDir)\userSettings&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
@@ -848,6 +856,10 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath="..\bin_support\Icons\chrFile.ico"
+				>
+			</File>
 			<File
 				RelativePath="..\bin_support\Icons\wmv.ico"
 				>
